# minddrill-rag

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  hello.py  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md  eval-runner.md  isolation-auditor.md
.claude/commands/: slice-done.md
.github/workflows/: eval.yml
alembic/: env.py
alembic/versions/: 0001_create_users_table.py  0002_documents_and_chunks.py  0003_ingestion_jobs.py  0004_chunks_bm25_index.py  0005_sessions_messages.py
docs/: 01_PROJECT_REQUIREMENTS.md  02_BACKEND_SOLUTION_NOTE.md  03_API_SPEC.md  04_DATABASE_SCHEMA.md  DECISIONS.md
eval/: _ragas_compat.py  config.py  run_eval.py
eval/fixtures/: northwind_handbook.md
eval/golden/: golden.jsonl
specs/: slice-0-skeleton.md  slice-1-auth.md  slice-2-thin-rag.md  slice-3-celery-ingestion.md  slice-4-hybrid-retrieval.md  slice-5-reranker.md  slice-6-streaming.md  slice-7a-sessions-memory.md  slice-7b-agent-tools.md  slice-8-observability.md  slice-9-eval-gate.md
src/minddrill/: config.py  logging.py  main.py  observability.py
src/minddrill/agent/: loop.py  model.py  tools.py
src/minddrill/auth/: deps.py  router.py  schemas.py  security.py
src/minddrill/db/: session.py  testing.py
src/minddrill/models/: __init__.py  chunk.py  document.py  ingestion_job.py  message.py  session.py  user.py
src/minddrill/providers/: base.py  failover.py  gemini.py  openrouter.py
src/minddrill/rag/: embedder.py  events.py  ingest.py  reranker.py  retrieve.py  router.py  schemas.py
src/minddrill/sessions/: chat.py  memory.py  router.py  schemas.py
src/minddrill/worker/: celery_app.py  tasks.py
tests/: _pdfgen.py  conftest.py  test_agent_chat.py  test_agent_tools.py  test_auth.py  test_eval.py  test_health.py  test_hybrid_retrieval.py  test_ingest.py  test_isolation.py  test_logging.py  test_observability.py  test_query.py  test_reranker.py  test_sessions.py  test_streaming.py
