[project]
name = "minddrill-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "bcrypt<4.1",
    "fastapi>=0.139.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.50.0",
]

[tool.uv]
dev-dependencies = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
