[project]
name = "minddrill-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "bcrypt<4.1",
    "fastapi>=0.139.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.50.0",
    "structlog>=26.1.0",
    "pgvector>=0.4.2",
    "langchain-google-genai>=4.2.6",
    "langchain-community>=0.4.2",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.14.2",
    "celery>=5.6.3",
    "redis>=8.0.1",
    "sentence-transformers>=5.6.0",
    "sse-starlette>=3.4.5",
    "openai>=2.45.0",
    "langgraph>=1.2.9",
    "langchain>=1.3.14",
    "langchain-openai>=1.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/minddrill"]

[tool.uv]
dev-dependencies = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
filterwarnings = [
    # langchain-community is sunsetting as a package, but there's no stable
    # standalone replacement for PyPDFLoader yet, and CLAUDE.md pins loaders to
    # LangChain. Tracked upstream, not actionable here.
    "ignore:`langchain-community` is being sunset:DeprecationWarning",
]
